--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -337,7 +337,7 @@ a {
 }
 .message__slogan {
   font-size: var(--step-0);
-  margin-block-start: var(--medium-space);
+  margin-block: var(--medium-space);
   color: var(--link-color);
   text-transform: uppercase;
   font-weight: var(--font-weight-medium);
@@ -348,7 +348,7 @@ a {
   width: 50%;
   gap: var(--small-space);
   flex-wrap: wrap;
-  margin-block-start: var(--medium-space);
+  margin-block-start: var(--normal-space);
 }
 .message__btn {
   width: 60%;
