--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -69,6 +69,9 @@ p {
     font-weight: var(--font-weight-normal);
     line-height: var(--line-height-base);
 }
+img {
+    max-width: 100%;
+}
 a {
     font-weight: var(--font-weight-medium);
     color: var(--link-color);
@@ -132,6 +135,8 @@ a {
   
 // History about Maya
 .history { 
+    overflow: hidden;
+
     &__heading {
         font-size: var(--step-2);
         line-height: var(--line-height-heading);
@@ -188,7 +193,6 @@ a {
         }
         &--river {
             background-color: #47433d;
-            padding: 0;
         }
         &--progress {
             background: 
@@ -209,30 +213,17 @@ a {
         width: 225%;
         bottom: 0;
         left: 0;
-        &--boiling {
-            left: -42%;
-        }
-        &--crowd {
-            left: -62%;
-        }
         &--news {
             width: 190%;
-            left: -45%;
         }
         &--statistic {
             width: 200%;
-            left: -48%;
         }
         &--countries {
             width: 150%;
-            left: -20%;
         }
         &--progress {
             width: 250%;
-            left: -65%;
-        }
-        &--ending {
-            left: -60%;
         }
     }
     &__importantText { 
@@ -245,10 +236,11 @@ a {
         fill: none; 
         stroke: #1a3047; 
         stroke-miterlimit: 10; 
-        stroke-width: 65px;
+        stroke-width: 40px;
         position: absolute;
         height: 100vh;
-        right: -86%;
+      
+right: -70%;
 
         & path {
             stroke-dasharray: 4000;
@@ -313,9 +305,9 @@ a {
     }
     // Cuts the earth image in half
     &__earth-container {
-        width: 200%;
+        width: 100%;
         height: 100vh;
-        max-height: 350px;
+        max-height: 170px;
         overflow: hidden;
         position: absolute;
         bottom: 0;
